[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sonasheet.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/Sona.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5, 48 )

[sub_resource type="Animation" id=3]
resource_name = "Fishc"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.35, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 3, 5, 3, 5, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[node name="Sona" type="Area2D"]
collision_layer = 0
collision_mask = 3
monitorable = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.5, -48 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Fishc = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="NO" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -646.0
margin_top = -188.0
margin_right = -52.0
margin_bottom = -81.0
text = "NO"

[node name="YES" type="Button" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 74.0
margin_top = -188.0
margin_right = 668.0
margin_bottom = -81.0
text = "YES"

[connection signal="area_entered" from="." to="." method="_on_Sona_area_entered"]
[connection signal="button_up" from="CanvasLayer/NO" to="." method="_on_NO_button_up"]
[connection signal="button_up" from="CanvasLayer/YES" to="." method="_on_YES_button_up"]
